fix visiblity

--- a/static/CSS/main.css
+++ b/static/CSS/main.css
@@ -44,6 +44,10 @@ div {
     width: 60%
 }
 
-.hidden {
+.NOW {
     display: none;
+}
+
+.hidden {
+    visibility: hidden;
 }
